landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  labels:
    app: landing-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-container
        image: landing-page:latest
        ports:
        - containerPort: 80
