landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-service
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
